--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST = localhost
-DB_DATEBASE = postgres
-DB_USERNAME = ibrahimnurbergen
-DB_PASSWORD =
+DB_HOST = 77.243.80.110
+DB_DATEBASE = basee
+DB_USERNAME = nurbergenov
+DB_PASSWORD = Aktau7292
 DB_PORT = 5432
 
 SECRET_JWT_AUTH = SecretKeyForJwtToken
